<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:id="@+id/thank_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/register_finish_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="13dp"
            android:textAlignment="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/register_finish_content1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="13dp"
            android:textAlignment="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/register_finish_content1"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register_finish_btn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/radius_bg_gary"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:clickable="true"
        android:gravity="center"
        android:padding="7dp">

        <TextView
            android:id="@+id/sign_screen_submit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_finish_done"
            android:textSize="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/signpage_submit_normal_color"/>

    </RelativeLayout>

</RelativeLayout>